CH-8: export products
